Add support for multiple case creation and related notifications
- Introduced new constants and JSON configurations for multiple case events.
- Implemented methods to handle the creation of multiple cases, including building URLs and sending notifications for errors.
- Updated data models to accommodate multiple claimants in case submissions.
- Enhanced notification service to send alerts for additional claimant creation failures and multiple shell creation errors.